fixed searchbar floating too high on load

--- a/styles/modules/defaults.scss
+++ b/styles/modules/defaults.scss
@@ -3,3 +3,9 @@
 	justify-content: center;
 	align-items: center;
 }
+
+@mixin hidden {
+	&--hidden {
+		display: none;
+	}
+}
