--- a/styles/modules/modal.scss
+++ b/styles/modules/modal.scss
@@ -132,8 +132,6 @@
 
 		background-color: rgba(0, 0, 0, 0.2);
 
-		&--hidden {
-			display: none;
-		}
+		@include defaults.hidden;
 	}
 }
