--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,9 @@
     grid-template-columns: repeat(4, 1fr);
   }
 }
+.results--hidden {
+  display: none;
+}
 
 .modal {
   display: grid;
